Resolve "Fix and update integration tests"